--- a/src/app/comun/mapa-mazmorra/mapa-mazmorra.component.html
+++ b/src/app/comun/mapa-mazmorra/mapa-mazmorra.component.html
@@ -18,6 +18,9 @@
               <div  class="canvasIsometrico" [ngStyle]= "this.estiloIsometrico">
                 <div *ngFor="let elementoIsometrico of isometrico.MapSave.Placeables.Placeable; let i= index" class="elementoIsometrico" (click)="clickElemento(elementoIsometrico)" [ngStyle]= "renderizarElementoIsometrico(elementoIsometrico)">
                     <img  class="imagenElementoIsometrico" src="{{elementoIsometrico.ImagePath}}">
+                    <ng-container *ngIf="elementoIsometrico.enemigoId">
+                        <img [ngStyle]= "renderizarEnemigoIsometrico(elementoIsometrico)" class="imagenEnemigoIsometrico" src="./assets/Enemigos/gnoll/1.png">
+                    </ng-container>
                 </div>
               </div>
           </div>
