--- a/src/app/comun/pinch-zoom/pinch-zoom.component.html
+++ b/src/app/comun/pinch-zoom/pinch-zoom.component.html
@@ -2,8 +2,9 @@
 	<ng-content></ng-content>
 </div>
 
-<!-- Control: one button -->
+<!-- Control: one button 
 <div class="pz-zoom-button pz-zoom-control-position-bottom" 
 	[class.pz-zoom-button-out]="isZoomedIn" 
 	*ngIf="isControl()" 
 	(click)="toggleZoom()"></div>
+-->
