--- a/src/app/comun/desarrollador/dungeonBuilderComponent/dungeonBuilder.component.html
+++ b/src/app/comun/desarrollador/dungeonBuilderComponent/dungeonBuilder.component.html
@@ -49,7 +49,7 @@
           <div class="boton" (click)="setEstadoMazmorra('salas')">SALAS</div>
           <div class="boton" (click)="setEstadoMazmorra('enemigos')">ENEMIGOS</div>
           <div class="boton" (click)="setEstadoMazmorra('eventos')">EVENTOS</div>
-          <div class="boton" (click)="setEstadoMazmorra('reticula')">
+          <div class="boton" (click)="setEstadoMazmorra('')">
             <img src="assets/desarrollador/isometrico.png">
           </div>
           <div class="boton" (click)="setEstadoMazmorra('isometrico')">
@@ -63,8 +63,11 @@
     <div class="panelIzquierdo" *ngIf="estadoPanelIzquierdo!=null">
 
         <div *ngIf="estadoPanelIzquierdo=='reticula'||estadoPanelIzquierdo=='isometrico'" class="contenedorPanelIzquierdo">
+
             <div class="contenedorTitulo">HERRAMIENTAS</div>
-            <div class="contenedorPanelIzquierdo">
+
+            <!-- Herramientas Reticula -->
+            <div *ngIf="estadoPanelIzquierdo=='reticula'" class="contenedorPanelIzquierdo">
                <img class="herramienta" src="assets/desarrollador/zoom-out.png" (click)="zoomOut()">
                <img class="herramienta" src="assets/desarrollador/zoom-in.png" (click)="zoomIn()">
                <img class="herramienta" src="assets/desarrollador/pointer.png" (click)="seleccionarHerramienta('seleccion')"/>
@@ -72,6 +75,21 @@
                <img class="herramienta" src="assets/desarrollador/reload.png" (click)="seleccionarHerramienta('rotar')"/>
                <img class="herramienta" src="assets/desarrollador/papelera.svg" (click)="seleccionarHerramienta('eliminar')"/>
                <img class="herramienta" src="assets/desarrollador/subir.png" (click)="seleccionarHerramienta('subir')"/>
+
+              <!-- Subir Archivo Isometrico -->
+              <input id="botonSubirIsometrico" type="file" name="file" (change)="incluirIsometrico($event)" multiple="false" accept=".json"/>
+              <label for="botonSubirIsometrico">
+                <img class="iconoSubir" src="assets/desarrollador/vista-isometrica.png"/>
+              </label>
+
+            </div>
+
+              <!-- Herramientas Isometrico -->
+            <div *ngIf="estadoPanelIzquierdo=='isometrico'" class="contenedorPanelIzquierdo">
+               <img class="herramienta" src="assets/desarrollador/zoom-out.png" (click)="zoomOut()">
+               <img class="herramienta" src="assets/desarrollador/zoom-in.png" (click)="zoomIn()">
+
+               <img class="herramienta" src="assets/desarrollador/pointer.png" (click)="deseleccionarTodo()"/>
 
               <!-- Subir Archivo Isometrico -->
               <input id="botonSubirIsometrico" type="file" name="file" (change)="incluirIsometrico($event)" multiple="false" accept=".json"/>
@@ -90,7 +108,7 @@
                       
                     <div *ngFor="let sala of mazmorra.salas; let i=index" class="sala" >
                         Sala {{sala.id}}: {{sala.nombre}} 
-                        <div *ngFor="let enemigo of mazmorra.salas[i].enemigos; let j=index" class="enemigo" (click)="seleccionarEnemigo(enemigo.enemigo_id)">{{enemigo.nombre}}</div>
+                        <div *ngFor="let enemigo of mazmorra.salas[i].enemigos; let j=index" class="enemigo" (click)="seleccionarEnemigoMazmorra(enemigo.enemigo_id)">{{enemigo.nombre}}</div>
                         <div class="add"(click)="crearEnemigo(i)">Añadir</div>
                     </div> 
                 </div>
@@ -104,7 +122,7 @@
      ************************************************* -->
       <div class="panelDerecho" *ngIf="estadoPanelDerecho!=null">
 
-          <div *ngIf="herramientaReticula=='add'">
+          <div *ngIf="estadoPanelDerecho=='reticula' && herramientaReticula=='add'">
             <div class="contenedorTitulo">AÑADIR</div>
 
             <div class="contenedorPanelDerecho">
@@ -127,7 +145,7 @@
         </div>  <!-- Fin panel selecionar --> 
 
         <!-- PANEL DERECHO ISOMETRICO -->
-        <div *ngIf="herramientaReticula=='isometrico'">
+        <div *ngIf="estadoPanelDerecho=='isometrico'">
             <div class="contenedorTitulo">ISOMÉTRICO</div>
             <div class="contenedorPanelDerecho">
                 <div class="tituloSeccion">Capas:</div>
@@ -165,23 +183,7 @@
                 <!-- Seccion Propiedades -->
                 <div class="tituloSeccion">Selección:</div>
 
-                    <!-- Capa Grid -->
-                    <div class="subtituloSeccion"> 
-                        <div class="botonSeleccion" (click)="mostrarPanelAsignarSala=true">Asignar sala</div>
-                        <div class="botonSeleccion">Asignar evento</div>
-                    </div>
 
-                    <div *ngIf="mostrarPanelAsignarSala" class="contenedorSeleccion" [formGroup]="formAsignarSala">
-                        <div class="texto">Asignar Sala:</div>
-                        <div class="contenedorOpcionesSeleccion">
-                            <mat-form-field appearance="legacy" class="campoFormulario formularioSeleccion">
-                                <mat-label>Id Sala:</mat-label>
-                                <input matInput placeholder="Id_Sala" formControlName="asignar_id_sala">
-                            </mat-form-field>
-                        </div>
-                        <div class="boton" (click)="asignarSala()">Asignar</div>
-                        <div class="boton" (click)="mostrarPanelAsignarSala=false">Cancelar</div>
-                      </div>
             </div>
         </div>  <!-- Fin panel DERECHO --> 
 
@@ -230,18 +232,135 @@
 
             <div *ngFor="let elementoIsometrico of mazmorra.isometrico.MapSave.Placeables.Placeable; let i= index" class="elementoIsometrico" (click)=seleccionarElementoIsometrico(i) [ngStyle]= "renderizarElementoIsometrico(elementoIsometrico)">
                 <img class="imagenElementoIsometrico" src="{{elementoIsometrico.ImagePath}}">
+                <ng-container *ngIf="elementoIsometrico.enemigoId">
+                    <img class="imagenEnemigoIsometrico" src="./assets/Enemigos/gnoll/1.png">
+                </ng-container>
 
             </div>
           </div>
+
+
+        <!--Panel Inferior-->
+        <div id="panelHerramientaInferiorDungeonBuilder">
+
+            <div class="selector">
+                <div class="opcion">Parametros</div>
+            </div>
+
+            <div class="contenedorInferior">
+                <!-- Boton ASIGNAR SALA -->
+                <botonComponent class="botonAsignar" (click)="botonAsignar('sala')" mat-button [tipoBoton]="2" [texto]="'ASIGNAR SALA'" [color]="'naranja'"></botonComponent>
+
+                <!-- Boton ASIGNAR TIPO -->
+                <botonComponent class="botonAsignar" (click)="botonAsignar('tipo')" mat-button [tipoBoton]="2" [texto]="'ASIGNAR TIPO'" [color]="'naranja'"></botonComponent>
+
+                <!-- Boton ASIGNAR ENEMIGO -->
+                <botonComponent class="botonAsignar" (click)="botonAsignar('enemigo')" mat-button [tipoBoton]="2" [texto]="'ASIGNAR ENEMIGO'" [color]="'naranja'"></botonComponent>
+
+                <!-- Boton ASIGNAR ESPECIAL -->
+                <botonComponent class="botonAsignar" (click)="botonAsignar('especial')" mat-button [tipoBoton]="2" [texto]="'ASIGNAR ESPECIAL'" [color]="'naranja'"></botonComponent>
+            </div>
+                    
+                    <!--Campo Evento Inspeccion 
+                    <mat-label>Inspeccionable: </mat-label>
+                    <mat-checkbox formControlName="inMapInspeccionable"></mat-checkbox>
+                    -->
+
+        </div> <!-- FIN Panel INMAP Inferior -->
+
       </div>
 
     <!-- *************************************************
-        PANEL ISOMETRICO
+        PANEL ASIGNAR PROPIEDADES ISOMETRICO
+     ************************************************* -->
+
+          <!-- Contenedor Selectores Propiedades -->
+          <div *ngIf="estadoMazmorra=='isometrico'" id="contenedorSelectorPropiedades">
+
+            <!-- Boton Asignar Sala -->
+            <div *ngIf="mostrarPanelAsignarSala" class="contenedorSeleccion" [formGroup]="formAsignarSala">
+                <div class="texto">Asignar Sala:</div>
+                <div class="contenedorOpcionesSeleccion">
+                    <mat-form-field appearance="legacy" class="campoFormulario formularioSeleccion">
+                        <mat-label>Id Sala:</mat-label>
+                        <input type="number" min="0" matInput placeholder="Id_Sala" formControlName="asignar_id_sala">
+                    </mat-form-field>
+                </div>
+                <div class="boton" (click)="asignarSala()">Asignar</div>
+                <div class="boton" (click)="mostrarPanelAsignarSala=false">Cancelar</div>
+            </div>
+
+            <!-- Boton Asignar Enemigo -->
+             <div *ngIf="mostrarPanelAsignarEnemigo" class="contenedorSeleccion" [formGroup]="formAsignarEnemigo">
+                <div class="texto">Asignar Enemigo:</div>
+                <div class="contenedorOpcionesSeleccion">
+                <!--Campo Enemigo ID -->
+                  <mat-form-field appearance="legacy"class="campoFormulario formularioSeleccion">
+                    <mat-label>Enemigo ID: </mat-label>
+                    <input matInput type="number" min="0" placeholder="Nombre" formControlName="enemigoId">
+                  </mat-form-field>
+                </div>
+                <div class="boton" (click)="asignarEnemigo()">Asignar</div>
+                <div class="boton" (click)="mostrarPanelAsignarEnemigo=false">Cancelar</div>
+              </div> 
+
+            <!-- Boton Asignar Tipo -->
+             <div *ngIf="mostrarPanelAsignarTipo" class="contenedorSeleccion" [formGroup]="formAsignarTipo">
+                <div class="texto">Asignar Tipo:</div>
+                <div class="contenedorOpcionesSeleccion">
+                <!--Campo Especial -->
+                  <mat-form-field appearance="fill"class="campoFormulario formularioSeleccion">
+                    <mat-label>Tipo: </mat-label>
+                    <mat-select formControlName="tipo">
+                        <mat-option value="decorado">Decorado</mat-option>
+                        <mat-option value="grid">Grid</mat-option>
+                    </mat-select>
+                  </mat-form-field>
+                </div>
+                <div class="boton" (click)="asignarTipo()">Asignar</div>
+                <div class="boton" (click)="mostrarPanelAsignarTipo=false">Cancelar</div>
+              </div> 
+
+            <!-- Boton Asignar Especial -->
+             <div *ngIf="mostrarPanelAsignarEspecial" class="contenedorSeleccion" [formGroup]="formAsignarEspecial">
+                <div class="texto">Asignar Especial:</div>
+                <div class="contenedorOpcionesSeleccion">
+                <!--Campo Especial -->
+                  <mat-form-field appearance="fill"class="campoFormulario formularioSeleccion">
+                    <mat-label>Tipo Especial: </mat-label>
+                    <mat-select formControlName="especial">
+                        <mat-option value="null">Ninguno</mat-option>
+                        <mat-option value="inspeccionable">Inspeccion</mat-option>
+                        <mat-option value="exploracion">Exploración</mat-option>
+                        <mat-option value="interactuar">Interactuar</mat-option>
+                    </mat-select>
+                  </mat-form-field>
+
+                <!--Campo Mensaje -->
+                  <mat-form-field appearance="legacy"class="campoFormulario formularioSeleccion">
+                    <mat-label>Mensaje Previo: </mat-label>
+                    <textarea matInput placeholder="Mensaje" formControlName="mensaje"></textarea>
+                  </mat-form-field>
+
+                <!--Campo Evento Encadenado -->
+                  <mat-form-field appearance="legacy"class="campoFormulario formularioSeleccion">
+                    <mat-label>Evento encadenado ID: </mat-label>
+                    <input matInput type="number" placeholder="eventoID" formControlName="eventoId">
+                  </mat-form-field>
+                </div>
+                <div class="boton" (click)="asignarEspecial()">Asignar</div>
+                <div class="boton" (click)="mostrarPanelAsignarEspecial=false">Cancelar</div>
+              </div> 
+
+          </div>
+
+    <!-- *************************************************
+        PANEL GENERAL
      ************************************************* -->
        
         <div *ngIf="estadoMazmorra=='general'" class="contenidoParametros">
 
-          <form *ngIf="estadoParametros=='General'" class="formularioGeneral" [formGroup]="formGeneral">
+          <form class="formularioGeneral" [formGroup]="formGeneral">
             <div class="columna">
               <mat-form-field appearance="legacy" class="campoFormulario">
                 <mat-label>Nombre mazmorra</mat-label>
@@ -388,12 +507,12 @@
               <div class="columna">
                 <mat-form-field  appearance="legacy" class="campoFormulario">
                   <mat-label >Enemigo ID</mat-label>
-                  <input matInput disabled type="number" placeholder="0" formControlName="enemigo_id" min="0">
+                  <input matInput type="number" placeholder="0" formControlName="enemigo_id" min="0">
                 </mat-form-field>
 
-                 <mat-form-field disabled appearance="legacy" class="campoFormulario">
+                 <mat-form-field appearance="legacy" class="campoFormulario">
                   <mat-label>Tipo Enemigo ID</mat-label>
-                  <input matInput disabled type="number" placeholder="0" formControlName="tipo_enemigo_id" min="0">
+                  <input matInput type="number" placeholder="0" formControlName="tipo_enemigo_id" min="0">
                 </mat-form-field>
 
                 <mat-form-field appearance="legacy" class="campoFormulario">
@@ -403,7 +522,7 @@
 
                 <mat-form-field appearance="legacy" class="campoFormulario">
                   <mat-label>Sala ID</mat-label>
-                  <input matInput type="number" placeholder="0" formControlName="num_sala" min="0">
+                  <input matInput type="number" placeholder="0" formControlName="salaId" min="0">
                 </mat-form-field>
 
                 <mat-form-field appearance="legacy" class="campoFormulario">
@@ -466,11 +585,15 @@
 
         <!-- FORMULARIO DE ENEMIGOS -->
         <div *ngIf="estadoMazmorra=='eventos'" class="contenidoParametros">
-            <formEventosComponent [eventos]="mazmorra.eventos" (sizeChange)="mazmorra.eventos=$event" class="formularioEventos"></formEventosComponent>
+            <formEventosComponent 
+                [eventos]="mazmorra.eventos" 
+                [esMazmorra]="true" 
+                (eventosChange)="mazmorra.eventos=$event"
+                (testEventoEmitter)="testEvento($event)" class="formularioEventos"></formEventosComponent>
         </div>
 
     </div>
 
-      </div> <!-- FIN CONTENEDOR DUNGEON BUILDER  -->
+    </div> <!-- FIN CONTENEDOR DUNGEON BUILDER  -->
 
 
