--- a/src/app/comun/desarrollador/dungeonBuilderComponent/dungeonBuilder.component.sass
+++ b/src/app/comun/desarrollador/dungeonBuilderComponent/dungeonBuilder.component.sass
@@ -176,9 +176,9 @@
     position: absolute
     overflow: scroll
     top: 15%
-    left: 20%
-    width: 60% 
-    height: 70% 
+    left: 17%
+    width: 66% 
+    height: 80% 
 
     .mensajeIsometricoVacio
         position: absolute
@@ -196,6 +196,8 @@
 
         .elementoIsomentrico
             position: absolute
+            display: flex
+            justify-content: center
             transform: translate(-50%,-50%)
             
         .imagenElementoIsometrico    
@@ -203,6 +205,12 @@
             //height: 100%
             &:hover
                 filter: sepia(100%) saturate(30)
+
+        .imagenEnemigoIsometrico
+            position: absolute
+            height: 100%
+            pointer-events: none
+
 
   .contenedorReticula
     position: absolute
@@ -606,38 +614,6 @@
                 background-color: white
                 border: black 2px solid
 
-      .contenedorSeleccion
-        position: absolute
-        background-color: black
-        border: solid white 5px
-        text-align: center
-        color: white
-        width: 80%
-        height: 70%
-        top: 15%
-        left: 10%
-        .contenedorOpcionesSeleccion
-            position: relative
-            margin: 5% 0px
-            .formularioSeleccion
-                position: relative
-                width: 80%
-                margin: 10%
-                color: black
-                background-color: white
-                text-align: center
-        .texto
-            position: relative
-            margin: 5% 0
-        .boton
-          position: relative
-          margin: 5% 10% 
-          width: 80%
-          height: 25px 
-          border: white 2px solid
-          &:hover
-            background-color: white
-            color: black
 
   .panelIzquierdo
     position: absolute
@@ -717,5 +693,95 @@
           .enemigo:hover
             background-color: white
 
+
+  #panelHerramientaInferiorDungeonBuilder
+    position: fixed
+    bottom: 0
+    height: 20%
+    width: 100%
+    left: 0
+    z-index: 1
+    background-color: dimgrey
+
+    .selector
+      position: relative
+      display: flex
+      width: 100%
+      height: 10%
+      .opcion
+        position: relative
+        display: flex
+        width: 100%
+        height: 100%
+        line-height: 1.5
+        align-items: center
+        justify-content: center
+        color: white
+        background-color: black
+        &.seleccionado
+          color: black
+          background-color: white
+        &:hover
+          color: black
+          background-color: white
+
+    .contenedorInferior
+      position: relative
+      display: flex 
+      height: 100%
+      width: 100%
+      align-items: center
+      justify-content: center
+      text-align: center
+
+      .botonAsignar
+        position: relative
+        margin: 20px
+        width: 10vw
+        height: 30%
+
+
+#contenedorSelectorPropiedades
+  position: absolute
+  top: 15%
+  left: 17%
+  width: 66% 
+  height: 80% 
+  pointer-events: none
+
+  .contenedorSeleccion
+    position: absolute
+    background-color: black
+    border: solid white 5px
+    text-align: center
+    color: white
+    width: 80%
+    height: 90%
+    left: 10%
+    display: flex
+    flex-direction: column
+    justify-content: space-evenly
+    align-items: center
+    overflow-y: scroll
+    pointer-events: all
+    .contenedorOpcionesSeleccion
+        position: relative
+        .formularioSeleccion
+            position: relative
+            width: 80%
+            color: black
+            background-color: white
+            text-align: center
+            margin: 5px 0
+    .texto
+        position: relative
+    .boton
+      position: relative
+      width: 80%
+      height: 25px 
+      border: white 2px solid
+      &:hover
+        background-color: white
+        color: black
 
 
