--- a/src/app/comun/mapa-mazmorra/mapa-mazmorra.component.sass
+++ b/src/app/comun/mapa-mazmorra/mapa-mazmorra.component.sass
@@ -6,12 +6,12 @@
   position: absolute
   width: 100%
   height: 100%
-  mix-blend-mode: multiply
+  //mix-blend-mode: none
 
 #contenedorMapaMazmorra
   .contenedorIsometrico
     position: relative
-    mix-blend-mode: multiply
+    //mix-blend-mode: multiply
     top: 0px
     left: 0px
     width: fit-content
@@ -36,9 +36,9 @@
         position: relative
         width: 3496px
         height: 2480px
-        mix-blend-mode: multiply
+        //mix-blend-mode: multiply
         z-index: 5
-        border: red 3px solid
+        //border: red 3px solid
 
         .elementoIsomentrico
             position: absolute
@@ -50,3 +50,8 @@
             //height: 100%
             &:hover
                 filter: sepia(100%) saturate(30)
+
+        .imagenEnemigoIsometrico
+            position: absolute
+            height: 100%
+            pointer-events: none
